// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle should increment counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductTitle should show the component correctly 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - With Image
  </span>
</div>
`;
